src/content/docs/en/sdk/android/v4/features/device-info.mdx
---
title: Get device information
description: Use these methods to add details to your callbacks and improve your reporting.
slug: en/sdk/android/v4/features/device-info
versions:
   - label: v5
     value: v5
     default: true
   - label: v4
     value: v4
redirects:
   v5: /en/sdk/android/features/device-info
---

The Adjust SDK contains helper methods that return device information. Use these methods to add details to your callbacks and improve your reporting.

## Adjust device identifier {#adjust-device-identifier}

<CodeBlock title="Method signature">

```java
public static String getAdid()
```

</CodeBlock>

Adjust generates a unique Adjust Device ID (ADID) for each device. Call the `getAdid` method to return this ID as a `String`.

<Tabs>
<Tab title="Kotlin" sync="kotlin">

```kotlin
val adid = Adjust.getAdid()
```

</Tab>

<Tab title="Java" sync="java" >

```java
String adid = Adjust.getAdid();
```

</Tab>

<Tab title="Javascript" sync="js" >

```js
let adid = Adjust.getAdid();
```

</Tab>
</Tabs>

## Google Play Services Advertising ID {#google-play-services-advertising-id}

<CodeBlock title="Method signature">

```java
public static void getGoogleAdId(Context context, OnDeviceIdsRead onDeviceIdRead)
```

</CodeBlock>

The Google Play Services Advertising ID (GPS ADID) is a device-specific identifier for Android devices.

Users can opt out of sharing their GPS ADID by toggling the "Opt out of Ads Personalization" setting on their device. When a user enables this setting, the Adjust SDK returns a string of zeros when trying to read the GPS ADID.

You can access this value by calling the `getGoogleAdId` method in a background thread. Assign a delegate function to access the GPS ADID value.

<Tabs>
<Tab title="Kotlin" sync="kotlin">

```kotlin
Adjust.getGoogleAdId(this, object : OnDeviceIdsRead {
   override fun onGoogleAdIdRead(googleAdId: String) {}
})
```

</Tab>

<Tab title="Java" sync="java" >

```java
Adjust.getGoogleAdId(this, new OnDeviceIdsRead() {
    @Override
    public void onGoogleAdIdRead(String googleAdId) {}
});
```

</Tab>

<Tab title="Javascript" sync="js" >

```js
Adjust.getGoogleAdId(function (googleAdId) {
   // ...
});
```

</Tab>
</Tabs>

## Amazon Advertiser ID {#amazon-advertiser-id}

<CodeBlock title="Method signature">

```java
public static String getAmazonAdId(final Context context)
```

</CodeBlock>

The Amazon Advertising ID (Amazon Ad ID) is a device-specific identifier for Android devices. Call the `getAmazonAdId` method to return this ID as a `String`.

<Tabs>
<Tab title="Kotlin" sync="kotlin">

```kotlin
val amazonAdId = Adjust.getAmazonAdId(getApplicationContext())
```

</Tab>

<Tab title="Java" sync="java" >

```java
String amazonAdId = Adjust.getAmazonAdId(getApplicationContext());
```

</Tab>

<Tab title="Javascript" sync="js" >

```js
let amazonAdId = Adjust.getAmazonAdId();
```

</Tab>
</Tabs>
